--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <p style="display: none;" id="x-mas-msg"><i class="bi bi-tree-fill text-success"></i> <small id="x-mas-msg-text" class="text-white"></small></p>
     </div>
-    <div style="display: none;" id="main-orbit" class="position-relative orbit">
+    <div id="main-orbit" class="position-relative orbit">
         <div id="sun" class="bg-warning sphere"></div>
         <div id="moon-orbit" class="orbit">
             <div id="earth" class="bg-primary sphere">
